  a better power function). 
- In SetoidList, eqlistA now expresses that two lists have similar elements 
  at the same position, while the predicate previously called eqlistA 
  is now equivlistA (this one only states that the lists contain the same 
  elements, nothing more). 
- In ListSet, a few definitions are now in Type (may induce a few
  incompatibilities).
- Changes in FSets/FMaps:
  - Improvements: in particular FMap now provides an induction principle 
    on maps, and some properties about FSets and fold needs less hypotheses.
    The polymorphic parameter for the fold function is now in Type. 
  - Loading FSets/FMap used to open unwanted scopes of integer datatypes 
    (see bug #1347). These scopes may need to be opened manually now.
  - Hints in FSetInterface.v have been transfered from the "core" database 
    to a "set" database, and some expensive hints have been downgraded 
    as "Immediate". A compatibility "oldset" database retains these expensive
    hints, so using "(e)auto with set oldset" should help porting scripts. 
    Same for FSetWeakInterface and FMap(Weak)Interface. 
- Changes in Reals:
  - Most statement in "sigT" (including the
    completeness axiom) are now in "sig" (in case of incompatibility,
    use proj1_sig instead of projT1, sig instead of sigT, etc).
  - More uniform naming scheme (identifiers in French moved to English,
    consistent use of 0 -- zero -- instead of O -- letter O --, etc).
  - Lemma on prod_f_SO is now on prod_f_R0.
  - Useless hypothesis of ln_exists1 dropped.
  - New Rlogic.v states a few logical properties about R axioms.
  - RIneq.v extended and made cleaner.
- Slight restructuration of the Logic library regarding choice and classical
  logic. Addition of files providing intuitionistic axiomatizations of
  descriptions: Epsilon.v, Description.v and IndefiniteDescription.v.

Notations, coercions and implicit arguments

- New options "Set Maximal Implicit Insertion", "Set Reversible Pattern